--- a/back_end/requirements.txt
+++ b/back_end/requirements.txt
@@ -1,5 +1,5 @@
 Django==3.0.8
-djangorestframework==3.11.0
+djangorestframework
 djangorestframework-simplejwt==4.4.0
 django-model-utils==4.0.0
 pymysql
