--- a/Dockerfile_FE
+++ b/Dockerfile_FE
@@ -9,6 +9,7 @@ COPY ./front_end/vite.config.js /app_fe/
 COPY ./front_end/index.html /app_fe/
 COPY ./front_end/.eslintrc.cjs /app_fe/
 
+RUN npm run build
 RUN npm install
 
 
