--- a/Dockerfile_BE
+++ b/Dockerfile_BE
@@ -9,6 +9,10 @@ COPY ./back_end /app_be/
 
 RUN pip install -r requirements.txt
 
+EXPOSE 9000
+
+CMD sh -c "python3 manage.py makemigrations --noinput && python3 manage.py migrate --noinput && python3 manage.py runserver 0.0.0.0:9000"
+
 
 
 
