--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,11 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+venv
 node_modules
 dist
 dist-ssr
 *.local
-
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,3 +21,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+__pycache__
