--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,8 +43,8 @@ jobs:
 
     - name: Run tests
       run: |
-        docker-compose -f docker-compose.yml run backend sh -c "python3 manage.py test api.tests"
+        docker compose -f docker-compose.yml run backend sh -c "python3 manage.py test api.tests"
 
     - name: Stop services
-      run: docker-compose -f docker-compose.yml down
+      run: docker compose -f docker-compose.yml down
 
