--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,14 +37,14 @@ jobs:
 
       - name: Build and run containers
         run: |
-          docker-compose up --build -d
+          docker compose up --build -d
           sleep 30  # Espera a que MySQL esté listo
 
       - name: Run migrations and tests
         run: |
-          docker-compose exec backend python3 manage.py makemigrations --noinput
-          docker-compose exec backend python3 manage.py migrate --noinput
-          docker-compose exec backend python3 manage.py test
+          docker compose exec backend python3 manage.py makemigrations --noinput
+          docker compose exec backend python3 manage.py migrate --noinput
+          docker compose exec backend python3 manage.py test
           
       - name: Stop and remove containers
-        run: docker-compose down
+        run: docker compose down
