--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Build and run containers
         run: |
-          docker-compose up --build -d
+          docker compose up --build -d
           sleep 15 # Espera 15 segundos para que se conecte la BD
 
       - name: Grant privileges to user
@@ -53,9 +53,9 @@ jobs:
     
       - name: Run migrations and tests
         run: |
-          docker-compose exec backend python3 manage.py makemigrations --noinput
-          docker-compose exec backend python3 manage.py migrate --noinput
-          docker-compose exec backend python3 manage.py test api.tests
+          docker compose exec backend python3 manage.py makemigrations --noinput
+          docker compose exec backend python3 manage.py migrate --noinput
+          docker compose exec backend python3 manage.py test api.tests
           
       - name: Stop and remove containers
-        run: docker-compose down
+        run: docker compose down
